add modified slide

--- a/_posts/0000-01-02-batkid.md
+++ b/_posts/0000-01-02-batkid.md
@@ -1,6 +1,5 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Modified slide"
 ---
-Your text
-Use the left arrow to go back!
+“One, remember to look up at the stars and not down at your feet. Two, never give up work. Work gives you meaning and purpose and life is empty without it. Three, if you are lucky enough to find love, remember it is there and don't throw it away.” ― Stephen Hawking
